differing static & dynamic types for object creation